# FAL

./: .gitignore  CMakeLists.txt  Makefile  README.md  conanfile.txt  fal.yml  pyproject.toml  tasks.py
.github/: dependabot.yml
.github/workflows/: build.yml
FAL/: FAL.cpp
FAL/wrappers/: fal.py
FAL/wrappers/javascript/: index.js
FAL/wrappers/python/: fal.py
demo/: .fal.yml  .gitignore  test.js
demo/functions/: package-lock.json  package.json  pnpm-lock.yaml  tasks.py
demo/functions/save-on-s3/: serverless.yml
fal/: FAL.cpp  beforebuild.go  cli.go  config.go  go.mod  go.sum  main.go
fal/builder/: shared.go  wrapper.go
fal/builder/shared/: Makefile  _go.mod  _go.sum  fal.go
fal/builder/wrapper/: javascript.go  python.go  ruby.go
fal/cli/: base.go  build.go  cli.go  create.go  review.go  version.go
fal/cli/command/: build.go  create.go  review.go  version.go
fal/config/: config.go  schema.go  validate.go
fal/manifest/: manifest.go  schema.go  schema.json  tojson.go  validate.go
fal/manifest/manifest.json/: schema.yml
fal/shared/: Makefile  fal.go  go.mod  go.sum
fal/shared/fs/: location.go
fal/shared/log/: log.go
fal/util/: location.go
fal/wrapper/: shared.go  wrapper.go
fal/wrapper/lib/: go._mod  go._sum  main._go
fal/wrappers/javascript/: index.js
fal/wrappers/python/: fal.py
fal/wrappers/ruby/: Gemfile  fal.rb
misc/: __init__.py  anylang.py  proj_dotnet.py  proj_go.py  proj_gradle.py  proj_node.py  proj_ruby.py
tests/: main.py
tests/javascript/: index.js  stress.js
tests/python/: main.py
tests/ruby/: main.rb
(+54 files in other folders)
