[tool.poetry]
name        = "fal"
version     = "0.1.0"
description = ""
authors     = ["Caian Ertl <hi@caian.org>"]
license     = "CC0-1.0"

[tool.poetry.dependencies]
python = "^3.8"
PyYAML = "^6.0"
Jinja2 = "^3.0.3"

[tool.poetry.dev-dependencies]
poethepoet = "^0.11.0"
black      = "^21.12b0"
jedi       = "^0.18.1"
pylint     = "^2.12.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
